[grid] Replace Guava map,list and set with Java equivalent for Node